--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <!-- Your header content goes here -->
+    <header class="sticky-header">
+       Article
     </header>
 
     <main>
