--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
        Article
     </header>
 
-    <main>
-        <!-- Your main content goes here -->
+    <div class="space"></div>
+
+    <main class="grid-container">
+        <div id="item-0"></div>
+        <div id="item-1"></div>
+        <div id="item-2"></div>
+        <div id="item-3"></div>
+        <div id="item-4"></div>
     </main>
+    <button></button>
 
     <footer>
         <!-- Your footer content goes here -->
