--- a/index.html
+++ b/index.html
@@ -4,28 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Website</title>
+    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Noto Serif' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="sticky-header">
-       Article
+      Comment 
     </header>
 
     <div class="space"></div>
 
-    <main class="grid-container">
-        <div id="item-0"></div>
-        <div id="item-1"></div>
-        <div id="item-2"></div>
-        <div id="item-3"></div>
-        <div id="item-4"></div>
-    </main>
-    <button></button>
+    <div class="grid-container">
+        <div class="grid-item large">
+        <article>
+            <h1>Matthew Parris</h1>
+            <h2>Our shortage of social housing is a disgrace</h2>
+            <p>A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                Exercise scientists have come up with a fitness solution that requires no equipment and a journey no further that to your own front room, so you can save yourself expense and  
+                <a href="#" class="read-more">. . .</a>
+            </p>
+        </article>
+    </div>
+        <div class="grid-item medium">
+            <h1>Janice Turner</h1>
+            <h2>The best cure for loneliness is 3D living</h2>
+            <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                Exercise scientists
+                <a href="#" class="read-more">. . .</a>
+            </p>
+            <img src="JaniceTurner.png" alt="Item 2 Image">
+        </div>
+        <div class="grid-item small">
+            <h1>Giles Coren</h1>
+            <h2>Damn all architects,the rich man's folly</h2>
+            <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                Exercise scientists
+                <a href="#" class="read-more">. . .</a>
+            </p>
+            <img src="GilesCoren.png" alt="Item 3 Image">
+        </div>
+        <div class="grid-item large">
+            <h1>Ben Macintyre</h1>
+            <h2>How Hilter's man failed to read Britain</h2>
+            <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                Exercise scientists
+                <a href="#" class="read-more">. . .</a>
+            </p>
+            <img src="JaniceTurner.png" alt="Item 4 Image">
+        </div>
+        <div class="grid-item medium">
+            <h1>Carol Midgley</h1>
+            <h2>Beckham's queueing was just Queen washing</h2>
+            <<p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                Exercise scientists
+                <a href="#" class="read-more">...</a>
+            </p>
+            <img src="Ben.png" alt="P">
+        </div>
+        <div class="grid-item small">
+            <h2>Letters to the Editor</h2>
+            <h2>Sturgeon's gamble and the future of Scotland</h2>
+            <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                Exercise scientists
+                <a href="#" class="read-more">. . .</a>
+            </p>
+            <img src="logo2.png" alt="logo2">
+        </div>
+        <div class="grid-item small">
+            <h1>Leading article</h1>
+            <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                Exercise scientists
+                <a href="#" class="read-more">. . .</a>
+            </p>
+            <img src="logo.png" alt="logo">
+        </div>
+            <img src="snowmanimg.png" alt="Item 6 Image">
+        
+    </div>
 
     <footer>
         <!-- Your footer content goes here -->
     </footer>
 
-    <script src="script.js"></script>
 </body>
 </html>
+<script src="script.js"></script>
