--- a/index.html
+++ b/index.html
@@ -16,71 +16,88 @@
     <div class="space"></div>
 
     <div class="grid-container">
-        <div class="grid-item large">
+        <div class="grid-item">
         <article>
             <h1>Matthew Parris</h1>
             <h2>Our shortage of social housing is a disgrace</h2>
             <p>A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
                 Exercise scientists have come up with a fitness solution that requires no equipment and a journey no further that to your own front room, so you can save yourself expense and  
-                <a href="#" class="read-more">. . .</a>
+                <a href="#" class="read-more">more . . .</a>
             </p>
         </article>
-    </div>
-        <div class="grid-item medium">
-            <h1>Janice Turner</h1>
-            <h2>The best cure for loneliness is 3D living</h2>
-            <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
-                Exercise scientists
-                <a href="#" class="read-more">. . .</a>
-            </p>
-            <img src="JaniceTurner.png" alt="Item 2 Image">
+        </div> 
+        <div class="grid-img">
+            <article>
+                <img src="snowmanimg.png" alt="Item 6 Image">
+            </article>
         </div>
-        <div class="grid-item small">
-            <h1>Giles Coren</h1>
-            <h2>Damn all architects,the rich man's folly</h2>
-            <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
-                Exercise scientists
-                <a href="#" class="read-more">. . .</a>
-            </p>
-            <img src="GilesCoren.png" alt="Item 3 Image">
+        <div class="grid-item">
+            <article>
+                <h1>Letters to the Editor</h1>
+                <h2>Sturgeon's gamble and the future of Scotland</h2>
+                <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                    Exercise scientists
+                    <a href="#" class="read-more">more . . .</a>
+                </p>
+                <img src="logo2.png" alt="logo2">
+            </article>
         </div>
-        <div class="grid-item large">
-            <h1>Ben Macintyre</h1>
-            <h2>How Hilter's man failed to read Britain</h2>
-            <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
-                Exercise scientists
-                <a href="#" class="read-more">. . .</a>
-            </p>
-            <img src="JaniceTurner.png" alt="Item 4 Image">
+        <div class="grid-item">
+            <article>
+                <h1>Leading article</h1>
+                <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                    Exercise scientists
+                    <a href="#" class="read-more">more . . .</a>
+                </p>
+                <img src="logo.png" alt="logo">
+            </article>
         </div>
-        <div class="grid-item medium">
-            <h1>Carol Midgley</h1>
-            <h2>Beckham's queueing was just Queen washing</h2>
-            <<p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
-                Exercise scientists
-                <a href="#" class="read-more">...</a>
-            </p>
-            <img src="Ben.png" alt="P">
+        <div class="grid-item">
+            <article>
+                <h1>Janice Turner</h1>
+                <h2>The best cure for loneliness is 3D living</h2>
+                <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                    Exercise scientists
+                    <a href="#" class="read-more">more . . .</a>
+                </p>
+                <img src="JaniceTurner.png" alt="Item 2 Image">
+            </article>
         </div>
-        <div class="grid-item small">
-            <h2>Letters to the Editor</h2>
-            <h2>Sturgeon's gamble and the future of Scotland</h2>
-            <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
-                Exercise scientists
-                <a href="#" class="read-more">. . .</a>
-            </p>
-            <img src="logo2.png" alt="logo2">
+        <div class="grid-item">
+            <article>
+                <h1>Giles Coren</h1>
+                <h2>Damn all architects,the rich man's folly</h2>
+                <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                    Exercise scientists
+                    <a href="#" class="read-more">more . . .</a>
+                </p>
+                <img src="GilesCoren.png" alt="Item 3 Image">
+            </article>
         </div>
-        <div class="grid-item small">
-            <h1>Leading article</h1>
-            <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
-                Exercise scientists
-                <a href="#" class="read-more">. . .</a>
-            </p>
-            <img src="logo.png" alt="logo">
+        <div class="grid-item">
+            <article>
+                <h1>Ben Macintyre</h1>
+                <h2>How Hilter's man failed to read Britain</h2>
+                <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                    Exercise scientists
+                    <a href="#" class="read-more">more . . .</a>
+                </p>
+                <img src="JaniceTurner.png" alt="Item 4 Image">
+            </article>
         </div>
-            <img src="snowmanimg.png" alt="Item 6 Image">
+        <div class="grid-item">
+            <article>
+                <h1>Carol Midgley</h1>
+                <h2>Beckham's queueing was just Queen washing</h2>
+                <p>  A Tory rebellion on housing and planning If the gym is already losing its appeal or you are just too busy to get there, then why bother?
+                    Exercise scientists
+                    <a href="#" class="read-more">more . . .</a>
+                </p>
+                <img src="Ben.png" alt="P">
+            </article>
+        </div>
         
+       
     </div>
 
     <footer>
